--- a/popup.css
+++ b/popup.css
@@ -1,19 +1,10 @@
 /* popup.css */
 .popup {
-    position: fixed;
-    right: 10px;
-    bottom: 10px;
-    width: 300px;
-    background-color: white;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    border-radius: 8px;
-    padding: 10px;
-    z-index: 1000;
+    width: 280px;
+    color: #314d3e;
 }
 
-.icon {
-    width: 50px;
-    height: auto;
-    display: block;
-    margin: 0 auto;
+#name{
+    font-size: 18px;
+    font-weight: bold;
 }
